<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="recommendation_icon_description">Recommendation icon</string>
    <string name="vacancy_for_you">Вакансии для вас</string>
    <string name="filter_action">Filter action</string>
    <string name="search_bar_hint">Должность, ключевые слова</string>

    <plurals name="more_vacancies">
        <item quantity="one">Еще %1$d вакансия</item>
        <item quantity="few">Еще %1$d вакансии</item>
        <item quantity="many">Еще %1$d вакансий</item>
        <item quantity="other">Еще %1$d вакансий</item>
    </plurals>

    <plurals name="looking_vacancy">
        <item quantity="one">Сейчас просматривает %1$d человек</item>
        <item quantity="few">Сейчас просматривают %1$d человека</item>
        <item quantity="many">Сейчас просматривают %1$d человек</item>
        <item quantity="other">Сейчас просматривают %1$d человек</item>
    </plurals>

    <plurals name="vacancies_counter">
        <item quantity="one">%1$d вакансия</item>
        <item quantity="few">%1$d вакансии</item>
        <item quantity="many">%1$d вакансий</item>
        <item quantity="other">%1$d вакансий</item>
    </plurals>

    <string name="search_bar_vacancies_hint">Должность по подходящим вакансиям</string>
    <string name="back_action">Back action</string>
    <string name="filter_by_conformity">По соответствию</string>

</resources>