<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_screen_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_bar"
                style="@style/Base.SearchBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_screen_margin"
                android:hint="@string/search_bar_hint"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/vacancy_filter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/vacancy_filter"
                style="@style/Base.SearchBar.ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/filter_action"
                app:icon="@drawable/filter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="search_bar"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recommendations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:padding="@dimen/default_screen_margin"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="10"
            tools:listitem="@layout/recommendation_block" />

        <TextView
            style="@style/TextTitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_screen_margin"
            android:text="@string/vacancy_for_you"
            android:textColor="@color/basic_white" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/vacancies"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:padding="@dimen/default_screen_margin"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/vacancy_block" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/more_vacancies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_screen_margin"
            android:background="@drawable/selectable_card_background"
            android:textColor="@color/basic_white"
            app:backgroundTint="@color/special_blue" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
